# carbon-black-cloud-threat-intelligence-connector

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  LICENSE  README.md  codeship-services.yml  codeship-steps.yml  config.yml  config.yml.example  env.encrypted  example.yml  main.py  mypy.ini  old_config.yml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  wizard.py
.github/workflows/: verify-python.yml
cbc_importer/: __init__.py  importer.py  taxii_configurator.py  utils.py
cbc_importer/cli/: __init__.py  connector.py  main.py  wizard.py
cbc_importer/stix_parsers/v1/: object_parsers.py  parser.py
cbc_importer/stix_parsers/v2/: parser.py  pattern_parser.py
config/: config.yml.example  wizard.py
configurator/: config.yml.example  example.yml  wizard.py
docker/amazon/: Dockerfile
docker/python3.10/: Dockerfile
docker/python3.8/: Dockerfile
docker/python3.9/: Dockerfile
docker/rhel/: Dockerfile
docker/suse/: Dockerfile
docker/ubuntu/: Dockerfile
examples/docker_example/: Dockerfile  credentials.cbc  crontab_process_server
src/cli/: wizard.py
src/stix_parsers/: stix1_object_parsers.py  stix1_parser.py  stix2_parser.py  stix2_pattern_parser.py
src/stix_parsers/v1/: object_parsers.py  parser.py
src/stix_parsers/v2/: parser.py  pattern_parser.py
src/stix_parsers/v20/: parser.py
src/stix_parsers/v21/: stix_feed_parser.py  stix_pattern_parser.py
src/tests/: conftest.py  test_cbc_helpers.py  test_wizard.py
src/tests/fixtures/: cbc_sdk_credentials_mock.py  cbc_sdk_mock.py  cbc_sdk_mock_responses.py  taxii1_mock.py  taxii2_mock.py  taxii_mock.py
src/tests/test_stix1/: test_file_parser.py  test_parse_taxii_server.py  test_parser.py
src/tests/test_stix2/: test_file_parser.py  test_parse_taxii_server.py  test_parser.py  test_pattern_parser.py
src/tests/test_v12/: test_parser.py
src/tests/test_v2/: test_feed_parser.py  test_file_parser.py  test_parser.py
src/tests/test_v21/: test_feed_parser.py  test_file_parser.py  test_pattern_parser.py
src/utils/: cbc_helpers.py
stix_parsers/v12/: parser.py
stix_parsers/v20/: parser.py
stix_parsers/v21/: parser.py  stix_feed_parser.py  stix_pattern_parser.py
tests/: conftest.py  test_importer.py  test_utils.py  test_wizard.py
tests/fixtures/: README.md  cbc_sdk_mock.py  cbc_sdk_mock_responses.py  config_mock.py  empty_file.xml  stix_v2.1_indicator_pattern_error.json  taxii1_mock.py  taxii2_mock.py
tests/fixtures/files/: stix_v1.2.xml  stix_v1.2_faulty.xml  stix_v2.0.json  stix_v2.0_faulty.json  stix_v2.1.json  (+3 more)
tests/long_tests/: test_importer_long_run.py
tests/performance/: README.md  performance_test_stix1_indicators.py  performance_test_stix1_observables.py  performance_test_stix2.py  requirements.txt  test_importer_long_run.py
tests/test_stix1/: test_file_parser.py  test_parse_taxii_server.py  test_parser.py
tests/test_stix2/: test_file_parser.py  test_parse_taxii_server.py  test_parser.py
tests/test_v12/: test_parser.py
tests/test_v21/: test_parser.py
tests/unit/: test_connector.py  test_importer.py  test_main.py  test_taxii_configurator.py  test_utils.py  test_wizard.py
(+19 files in other folders)
