[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/fixtures/files/
  | profiling
)/
'''

[tool.mypy]
ignore_missing_imports = true
files = ['./cbc_importer/**/*.py', './config/*.py']

[tool.poetry]
name = "cbc-taxii-connector"
version = "0.1.0"
description = "CBC STIX/TAXII Connector"
authors = ["Dimitar Ganev <dganev@vmware.com>" , "Emanuela Mitreva <emitreva@vmware.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.8"
stix = "1.2.0.11"
stix-validator = "2.5.1"
stix2 = "3.0.1"
stix2-validator = "3.0.2"
stix2-patterns = "1.3.2"
carbon-black-cloud-sdk = "1.3.5"
validators = "0.18.2"
cabby = "0.1.23"
taxii2-client = "2.3.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
coverage = "6.3"
coveralls = "3.3.1"
flake8 = "4.0.1"
flake8-colors = "0.1.9"
flake8-docstrings = "1.6.0"
mypy = "0.930"
types-PyYAML = "6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
