[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/fixtures/files/
  | profiling
)/
'''

[tool.mypy]
ignore_missing_imports = true
files = ["./cbc_importer/**/*.py", "./configurator/*.py"]

[tool.poetry]
name = "carbon-black-cloud-threat-intelligence-connector"
version = "1.7"
description = "Carbon Black Cloud Threat Intelligence Connector"
authors = ["Dimitar Ganev <dganev@vmware.com>" , "Emanuela Mitreva <emitreva@vmware.com>"]
license = "BSD-2-Clause"
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["connector", "carbonblackcloud", "stixtaxii", "stix", "taxii"]
packages = [
    { include = "cbc_importer" }
]

[tool.poetry.dependencies]
python = "^3.8"
stix = "1.2.0.11"
stix-validator = "2.5.1"
stix2 = "3.0.1"
stix2-validator = "3.0.2"
stix2-patterns = "2.0.0"
carbon-black-cloud-sdk = "1.3.5"
validators = "0.18.2"
cabby = "0.1.23"
click = "8.0.4"
taxii2-client = "2.3.0"
typer = "0.4.0"
arrow = "1.2.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
coverage = "6.2"
coveralls = "3.3.1"
flake8 = "4.0.1"
flake8-colors = "0.1.9"
flake8-docstrings = "1.6.0"
mypy = "0.930"
types-PyYAML = "6.0.3"
black = "22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cbc-threat-intel = "cbc_importer.cli.connector:cli"
cbc-threat-intel-wizard = "cbc_importer.cli.wizard:cli"
